@@ -201,7 +201,7 @@
    <property name="operator">or</property>
    <property name="operator_visible">False</property>
    <property
-      name="vocabulary">Products.PloneMeeting.vocabularies.creatorsvocabulary</property>
+      name="vocabulary">Products.PloneMeeting.vocabularies.creatorsforfacetedfiltervocabulary</property>
    <property name="catalog"></property>
    <property name="maxitems">0</property>
    <property name="sortreversed">False</property>
@@ -220,7 +220,7 @@
    <property name="operator">or</property>
    <property name="operator_visible">False</property>
    <property
-      name="vocabulary">Products.PloneMeeting.vocabularies.creatorsvocabulary</property>
+      name="vocabulary">Products.PloneMeeting.vocabularies.creatorsforfacetedfiltervocabulary</property>
    <property name="catalog"></property>
    <property name="maxitems">0</property>
    <property name="sortreversed">False</property>
