@@ -718,6 +718,15 @@
           </td>
         </tr>
         <tr valign="top">
+          <td tal:define="field python:here.getField('usersHiddenInDashboardFilter')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
+          <td>
+          </td>
+          <td>
+          </td>
+        </tr>
+        <tr valign="top">
           <td tal:define="field python:here.getField('maxShownListings')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
